Build Logics For BMI Calculator and add Icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Weight"
-                android:textColor="@color/text_hint"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
                 android:ems="10"
                 android:hint="0"
                 android:inputType="number"
-                android:textColor="@color/white"
+                android:textColor="#989393"
                 android:textColorHint="@color/text_hint"
                 android:textSize="60sp"
                 android:textStyle="bold"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kg"
-                android:textColor="@color/text_hint"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Height"
-                android:textColor="@color/text_hint"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cm"
-                android:textColor="@color/text_hint"
+                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -189,7 +189,7 @@
                 android:id="@+id/tvIndex"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="24.35"
+                android:text=""
                 android:textAlignment="center"
                 android:textSize="50sp"
                 android:textStyle="bold"
@@ -201,7 +201,7 @@
                 android:id="@+id/tvResult"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="You are healthy"
+                android:text=""
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_green_dark"
                 android:textSize="30sp"
@@ -213,7 +213,7 @@
                 android:id="@+id/tvInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="(normal range is 18.5-24.9)"
+                android:text=""
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/text_hint"
