--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,11 @@
+<!--
+  ~ /**
+  ~  * Created by naveen on 09/09/22, 11:24 PM
+  ~  * Copyright (c) 2022 . All rights reserved.
+  ~  * Last modified 09/09/22, 12:05 AM
+  ~  */
+  -->
+
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.BMICalculator" parent="Theme.MaterialComponents.DayNight.NoActionBar">
